# slio-git

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: phpstorm-parity-checklist.md
e2e/: conftest.py  rpa.py  run.sh  test_app_launch.py  test_history_view.py  test_repo_operations.py  test_settings_persistence.py  test_toolbar_actions.py
e2e/actions/: __init__.py  diff.py  navigation.py  staging.py  toolbar.py
e2e/scenarios/: test_blame_annotation.py  test_branch_context_actions.py  test_branch_popup_ops.py  test_branch_switch.py  test_context_menu.py  test_context_menu_actions.py  test_developer_workflows.py  test_full_walkthrough.py  test_history_context_actions.py  test_history_search.py  test_hunk_staging.py  test_log_filtering.py  test_project_switcher.py  (+1 more)
scripts/: package-linux-tarball.sh
site/: index.html
src-ui/: Cargo.toml  build.rs
src-ui/assets/: AppIcon.icns  icon_64.rgba
src-ui/src/: file_watcher.rs  i18n.rs  keyboard.rs  main.rs  state.rs  theme.rs
src-ui/src/components/: rail_icons.rs  status_icons.rs
src-ui/src/views/: branch_popup.rs  commit_dialog.rs  history_view.rs  main_window.rs  mod.rs  rebase_editor.rs  remote_dialog.rs  settings_view.rs  stash_panel.rs  tag_dialog.rs  worktree_view.rs
src-ui/src/widgets/: button.rs  changelist.rs  commit_panel.rs  conflict_resolver.rs  diff_core.rs  diff_editor.rs  diff_file_header.rs  diff_viewer.rs  log_tabs.rs  menu.rs  merge_editor.rs  mod.rs  scrollable.rs  split_diff_viewer.rs  syntax_highlighting.rs  text_input.rs  tree_widget.rs
(+38 files in other folders)
