[package]
name = "src-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
git-core = { path = "../src/git-core" }
iced = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread"] }
rfd = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
num_cpus = "1"
chrono = { workspace = true }
once_cell = "1.19"
syntect = { workspace = true }
iced-code-editor = { path = "../vendor/iced-code-editor" }
unicode-width = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
